# logurich

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  tests.yml
examples/: async_context.py  base.py  click_cli.py  mp_adv_data_processing.py  mp_example.py  serialize.py  user_input_example.py
logurich/: __init__.py  __init__.pyi  console.py  core.py  core.pyi  handler.py  opt_click.py  struct.py  utils.py
scripts/: bump_version.py
src/logurich/: __init__.py  core.py  handler.py  opt_click.py  struct.py  user_input.py
tests/: conftest.py  test_core.py  test_mp.py  test_opt_click.py  test_rich.py
