[project]
name = "logurich"
version = "0.4.0"
description = "A Python library combining Loguru and Rich for beautiful logging."
authors = [
    { name = "PakitoSec", email = "jeromep83@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "logging",
    "loguru",
    "rich",
    "console",
    "terminal",
    "colored-logging",
    "structured-logging",
    "pretty-logging",
]
dependencies = [
    "loguru",
    "rich"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PakitoSec/logurich"
Repository = "https://github.com/PakitoSec/logurich"

[project.optional-dependencies]
click = [
    "click>=8.1.8",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.3",
  "ruff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"logurich" = ["py.typed", "*.pyi"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["logurich"]
