[project]
name = "logurich"
version = "0.9.2"
description = "A Python library combining standard logging and Rich for beautiful logging."
authors = [
    { name = "PakitoSec", email = "jeromep83@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "logging",
    "rich",
    "console",
    "terminal",
    "colored-logging",
    "structured-logging",
    "pretty-logging",
]
dependencies = [
    "rich==14.2.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PakitoSec/logurich"
Repository = "https://github.com/PakitoSec/logurich"

[project.optional-dependencies]
click = [
    "click>=8.1.8",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.3",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["logurich"]
